Fix pagination alignement search + list page

--- a/less/ng-obiba-mica.less
+++ b/less/ng-obiba-mica.less
@@ -364,7 +364,6 @@
 
 div.sortwidget {
   color: #000;
-  padding-top: 5px;
   .dropdown {
     .dropdown-menu {
       min-width: 250px;
